<resources>
    <string name="app_name">CaloriesBurnedCalculator</string>
    <string name="nameET">Name</string>
    <string name="bmiTV">00</string>
    <string name="caloriesBurnedTV">00.0</string>
    <string name="milesRanTV">1</string>
    <string name="bmiLabelTV">BMI</string>
    <string name="heightLabelTV">Height</string>
    <string name="caloriesBurnedLabelTV">Calories Burned</string>
    <string name="milesRanLabelTV">Miles Ran</string>
    <string name="weightLabelTV">Weight</string>
</resources>
