<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aubuchon.caloriesburnedcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:id="@+id/textView9" />

    <TextView
        style="@style/textView"
        android:id="@+id/weightLabelTV"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/weightLabelTV"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/nameET"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/milesRanLabelTV"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        style="@style/textView"
        android:id="@+id/milesRanLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milesRanLabelTV"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/caloriesBurnedLabelTV" />

    <TextView
        style="@style/textView"
        android:id="@+id/caloriesBurnedLabelTV"
        android:layout_width="138dp"
        android:layout_height="39dp"
        android:text="@string/caloriesBurnedLabelTV"
        android:textStyle="bold"
        android:layout_marginLeft="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toTopOf="@+id/heightLabelTV" />

    <TextView
        style="@style/textView"
        android:id="@+id/heightLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightLabelTV"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/bmiLabelTV" />

    <TextView
        style="@style/textView"
        android:id="@+id/bmiLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiLabelTV"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="54dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <SeekBar

        android:id="@+id/milesRanSeekBar"
        android:layout_width="98dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="30"
        android:progress="1"
        app:layout_constraintLeft_toRightOf="@+id/milesRanTV"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintTop_toTopOf="@+id/milesRanTV"
        android:layout_marginTop="8dp" />

    <TextView
        style="@style/textView"
        android:id="@+id/milesRanTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milesRanTV"
        app:layout_constraintLeft_toRightOf="@+id/milesRanLabelTV"
        android:layout_marginLeft="52dp"
        app:layout_constraintTop_toTopOf="@+id/milesRanLabelTV"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/weightET"
        style="@style/textSize"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="000"
        app:layout_constraintLeft_toRightOf="@+id/weightLabelTV"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/nameET"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/milesRanSeekBar"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        style="@style/textView"
        android:id="@+id/caloriesBurnedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caloriesBurnedTV"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/caloriesBurnedLabelTV"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintTop_toTopOf="@+id/caloriesBurnedLabelTV"
        android:layout_marginTop="8dp" />

    <Spinner
        style="@style/textSize"
        android:id="@+id/heightFootSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="326dp"
        tools:layout_editor_absoluteX="217dp" />

    <Spinner
        style="@style/textSize"
        android:id="@+id/heightInchesSpinner"
        android:layout_width="51dp"
        android:layout_height="25dp"
        app:layout_constraintLeft_toRightOf="@+id/heightFootSpinner"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintTop_toTopOf="@+id/heightFootSpinner"
        android:layout_marginTop="0dp" />

    <TextView
        style="@style/textView"
        android:id="@+id/bmiTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiTV"
        app:layout_constraintLeft_toRightOf="@+id/bmiLabelTV"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintTop_toTopOf="@+id/bmiLabelTV"
        android:layout_marginTop="8dp" />

    <EditText
        style="@style/textSize"
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.014" />

</android.support.constraint.ConstraintLayout>
